<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.cortex</groupId>
		<artifactId>connector</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<groupId>com.cortex</groupId>
	<artifactId>cont1</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>cont1</name>
	<url>http://maven.apache.org</url>
	<properties>
		<java.version>10</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.cortex</groupId>
			<artifactId>cont2</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.cortex</groupId>
			<artifactId>message-broker</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<!-- <exclusion> <groupId>javax.annotation</groupId> <artifactId>javax.annotation-api</artifactId> 
					</exclusion> -->
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.jboss.spec.javax.annotation</groupId>
					<artifactId>jboss-annotations-api_1.2_spec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.mortbay.jasper</groupId>
					<artifactId>apache-el</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
		</dependency>
		<dependency>
			<!-- https://jira.spring.io/browse/SPR-16776 -->
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.1.0.BUILD-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>jdk10</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<java.version>10</java.version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.7.0</version>
						<configuration>
							<release>${java.version}</release>
							<compilerArgs>
								<arg>--module-path</arg>
								<arg>${project.build.directory}/../../message-broker/target/modules:${project.build.directory}/../../cont2/target/modules</arg>
							</compilerArgs>
						</configuration>
						<dependencies>
							<!-- JDK 10 fix -->
							<dependency>
								<groupId>org.ow2.asm</groupId>
								<artifactId>asm</artifactId>
								<version>6.1.1</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.0.2</version>
						<configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>build-info</goal>
								</goals>
								<configuration>
									<additionalProperties>
										<encoding.source>${project.build.sourceEncoding}
										</encoding.source>
										<encoding.reporting>${project.reporting.outputEncoding}
										</encoding.reporting>
										<java.source>${java.version}</java.source>
										<java.target>${java.version}</java.target>
									</additionalProperties>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/modules
									</outputDirectory>
									<includeScope>runtime</includeScope>
									<excludeArtifactIds>
										jboss-transaction-api_1.2_spec
									</excludeArtifactIds>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>spring-snapshot</id>
			<name>Spring Snapshot Repository</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
